--- a/main.html
+++ b/main.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>my website!</title>
         <meta name="viewport" content="width=device-width, initial-scale=0.1">
+        <title>my website!</title>
         <link rel="stylesheet" href="main.css">
         
     </head>
@@ -10,18 +10,21 @@
         <header class="hero">
             <p class="hero-title">wellcome to my website</p>
         </header>
-        <div id="first_div">
-            here you can go beyond imagination
+        <div id="major_div">
+            <h2 style="text-align: center;
+            padding: 50px;
+            color: azure;">here you can go beyond imagination<br></h2>
+            <h3 style="margin: 50px;
+            color: rgb(86, 172, 193);">you can choose whatever color you like from the list below<br></h3>
+            <div class="first_div">
+                <div style="background-color: blue;">BLUE</div>
+                <div style="background-color: red">RED</div>
+                <div style="background-color: green">GREEN</div>
+                <div style="background-color:yellow">YELLOW</div>
+                <div style="background-color:orange">ORANGE</div>
+                <div style="background-color:purple">PURPLE</div>
+                <div style="background-color:pink">PINK</div>
+            </div>
         </div>
-        a line of code <br>
-        another line of shit <br>
-        some other shit of words <br>
-        some other shit of words <br>
-        some other shit of words <br>
-        some other shit of words <br>
-        some other shit of words <br>
-        some other shit of words <br>
-        some other shit of words <br>
-        some other shit of words <br>
     </body>
 </html>
